--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,19 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: "Mercur is an open-source marketplace solution powered by Medusa.js"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+Mercur leverages the powerful flexibility of Medusa.js to provide a robust foundation for building enterprise-grade marketplaces. Out of the box, Mercur comes equipped with essential marketplace functionality including:
 
-## Setting up
+- Automated order splitting between vendors
+- A dedicated vendor management portal
+- Comprehensive admin dashboard
+- Built-in Stripe Connect for payment processing
 
-The first step to world-class documentation is setting up your editing environments.
+# Why you should use Mercur
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+Built on Medusa.js's modular commerce framework, Mercur can be easily customized and extended to support various marketplace models:
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+- Create B2B marketplaces by utilizing Medusa's Sales Channel capabilities
+- Build digital product marketplaces for software, content, and more
+- Develop food delivery platforms and local commerce solutions
