--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,14 +1,14 @@
 ---
 title: Introduction
-description: "Mercur is an open-source marketplace solution powered by Medusa.js"
+description: "Mercur is an open-source marketplace solution powered by Medusa 2.0"
 ---
 
 Mercur leverages the powerful flexibility of Medusa.js to provide a robust foundation for building enterprise-grade marketplaces. Out of the box, Mercur comes equipped with essential marketplace functionality including:
 
 - Automated order splitting between vendors
-- A dedicated vendor management portal
 - Comprehensive admin dashboard
-- Built-in Stripe Connect for payment processing
+- A dedicated vendor management portal (🚧 In Progress)
+- Built-in Stripe Connect for payment processing (🚧 In Progress)
 
 # Why you should use Mercur
 
