Add payouts docs

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -7,8 +7,8 @@ Mercur leverages the powerful flexibility of Medusa.js to provide a robust found
 
 - Automated order splitting between vendors
 - Comprehensive admin dashboard
+- Built-in Stripe Connect for payment processing
 - A dedicated vendor management portal (🚧 In Progress)
-- Built-in Stripe Connect for payment processing (🚧 In Progress)
 
 # Why you should use Mercur
 
