update documentation - reviews

--- a/core-concepts/requests.mdx
+++ b/core-concepts/requests.mdx
@@ -4,13 +4,14 @@ title: "Requests"
 
 # Seller requests
 
-Seller requests is a solution for ellers to create entity proposals. Each request needs to be reviewed by marketplace admin before it goes live.
+Seller requests is a solution for sellers to create entity proposals. Each request needs to be reviewed by marketplace admin before it goes live.
 
 ### Request types
 
 - `product` - create a new product. Admin can later set this `product` as a global product, or seller-specific.
-- `product_collection` - create a new product collection,
-- `product_category` - create a new product category,
+- `product_collection` - create a new product collection.
+- `product_category` - create a new product category.
+- `review_remove` - ask to remove the unfair review from customer.
 
 ### Workflow
 
